objects/Cosmetovigilance_Callout_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cosmetovigilance Callout Settings</label>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Retries__c</fullName>
        <label>Max Retries</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_System__c</fullName>
        <label>Origin System</label>
        <length>21</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_All_Event_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save All Event Logs</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>